spacing issues

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -193,7 +193,7 @@ header {
 
 .nex {
   font-size: 1.2656rem;
-	height: 2.75em;
+	height: 2.65em;
 	background-color: #E90034;
 }
 
